--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <div class="tyyp">
         <img src="images/typ.jpg" alt="typ"/>
     </div>
+    <div class="aot">
+        <img src="images/aot.jpg" alt="typ"/>
+    </div>
 </body>
 </html>
